# DreamAgent

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/evoinfer/: README.md
experiments/limx_attention_bench/: fla_attention_benchmark.py
scripts/: evoinfer_benchmark_verifier.py  evoinfer_campaign.py  evoinfer_campaign_suite.py  evoinfer_client_autonomy_validation.py  evoinfer_dream_protocol_verifier.py  evoinfer_flashinfer_sampling_jit_outcome_verifier.py  evoinfer_library_campaign_verifier.py  evoinfer_operator_campaign_verifier.py  evoinfer_phase0_smoke_verifier.py
src/evoinfer_mcp/: __init__.py  __main__.py  cli.py  share.py
src/evoinfer_mcp/dream/: __init__.py  embedding.py  (+4 more)
src/kimi_cli/: session_state.py
tests/core/: test_agent_spec.py  test_dream_mcp_server.py  test_dream_mode.py  test_dream_mode_injection_provider.py  test_evoinfer_benchmark_verifier.py  test_evoinfer_cli.py  test_evoinfer_dream_checkpoint_hook.py  test_evoinfer_dream_protocol_verifier.py  test_evoinfer_flashinfer_sampling_jit_outcome_verifier.py  test_evoinfer_library_campaign_verifier.py  test_evoinfer_operator_campaign_verifier.py  test_evoinfer_phase0_smoke_verifier.py
tests/tools/: test_dream_memory.py
tests/web/: test_codex_adapter.py  test_codex_backend_selection.py  test_dream_api.py  test_speech_api.py  test_system_api.py
web/: index.html
web/src/: App.tsx
web/tests/: authToken.test.ts  branding.test.ts  compactionMessages.test.ts  dreamUtils.test.ts  evoInferPage.test.ts  promptInputAttachment.test.ts  promptInputFiles.test.ts  sessionTitleEdit.test.ts
(+67 files in other folders)
