[project]
name = "evoinfer-mcp"
version = "0.1.0"
description = "Open-box MCP memory manager for inference optimization agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28,<0.29",
    "mcp>=1.21.0",
    "pydantic>=2.12,<3.0",
    "typer>=0.20,<0.22",
    "websockets>=15,<16",
]

[project.optional-dependencies]
embedding = [
    "sentence-transformers>=3.0,<6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.14",
]

[project.scripts]
evoinfer = "evoinfer_mcp.__main__:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["evoinfer_mcp"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]
